Added test projects and IDummyStockProvider

--- a/BasketAPI/BasketAPI/BasketAPI.csproj
+++ b/BasketAPI/BasketAPI/BasketAPI.csproj
@@ -30,5 +30,6 @@
     <Folder Include="Controllers\" />
     <Folder Include="Models\ViewModel\" />
     <Folder Include="Services\Implementations\" />
+    <Folder Include="Providers\" />
   </ItemGroup>
 </Project>
