--- a/BasketAPI/BasketAPI/BasketAPI.csproj
+++ b/BasketAPI/BasketAPI/BasketAPI.csproj
@@ -31,5 +31,6 @@
     <Folder Include="Models\ViewModel\" />
     <Folder Include="Services\Implementations\" />
     <Folder Include="Providers\" />
+    <Folder Include="Exceptions\" />
   </ItemGroup>
 </Project>
