fixed docker problem

--- a/BasketAPI/BasketAPI/appsettings.json
+++ b/BasketAPI/BasketAPI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=postgres;Server=localhost;Port=5433;Database=postgres;Integrated Security=true;Pooling=true;"
+    "DefaultConnection": "User ID=postgres;Password=postgres;Server=postgres;Port=5432;Database=postgres;Integrated Security=true;Pooling=true;"
   }
 }
