docker file edit for swagger

--- a/BasketAPI/BasketAPI/docker-compose.yml
+++ b/BasketAPI/BasketAPI/docker-compose.yml
@@ -19,6 +19,8 @@ services:
 
   web:
     image: 'basketapi'
+    environment:
+        - ASPNETCORE_ENVIRONMENT=Development
     build:
       context: .
       dockerfile: Dockerfile
